	Windows. On Windows, there are no Unix domain sockets, so instead
	we just have the sockaddr_in of a TCP socket bound to the loopback
	interface stored in a plain file. Yes, this is insecure on
	multiple-user machines. Will have to spend more time on this issue
	sometime. Presumably Win32 named pipes are what should be used
	instead.
	(camel_stub_new): Corresponding ifdefs.

2008-05-08  Tor Lillqvist  <tml@novell.com>

	Win32 portability changes from a long time ago, now finally
	starting to commit them a little at a time. Whether
	evolution-exchange actually works on Windows is not clear... but
	at least once these changes are in there is a possibility.

	* configure.in: Define Automake conditional OS_WIN32.

	* camel/Makefile.am: Pass also PREFIX to the compiler. Use
	-no-undefined on Windows. Link with SOCKET_LIBS and PTHREAD_LIB.

	* camel/camel-exchange-provider.c: Include
	libedataserver/e-data-server-util.h for some Windows-specific
	functions. Construct the localedir at run-time on Windows.

	* camel/camel-exchange-store.c (e_filename_make_safe)
	* storage/exchange-component.c (e_filename_make_safe): Remove
	these two copies of this function. Just use the one in
	libedataserver.

	* camel/camel-exchange-store.c (exchange_connect)
	* storage/exchange-component.c (config_listener_account_created):
	Construct the path to the socket in the same way in these two
	functions. Use g_get_tmp_dir() instead of hardcoding /tmp. Use
	g_build_filename().

	* camel/camel-exchange-store.c (exchange_get_folder): Use
	g_file_test() instead of access().

	* camel/camel-exchange-summary.c: Drop unnecessary inclusion of
	<sys/uio.h>.

	* camel/camel-stub-marshal.c: Use closesocket() instead of close()
	for sockets on Windows. Use camel_read_socket() and
	camel_write_socket() instead of camel_read() and camel_write().

	* mail/mail-stub.c No need to include <sys/socket.h> and
	<sys/un.h> in this file.
	(mail_stub_construct): Use g_io_channel_win32_new_socket() on